
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-chatkit"
version = "0.1.0"
description = "A pluggable real-time chat app for Django (Channels) with multi-file uploads and light/dark UI."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD 3-Clause"
authors = [{name="kawsar alam foysal"}]
dependencies = [
    "Django>=4.2",
    "channels>=4.1",
    "daphne>=4.0",
    "whitenoise>=6.0",
    "Pillow>=10.0.0",
]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://example.invalid/chatkit"

[tool.setuptools]
packages = ["chatkit"]

